2007-07-12  Sean O'Rourke  <sorourke@cs.ucsd.edu>  (tiny change)

	* pcomplete.el (pcomplete-entries): Obey pcomplete-ignore-case.

	* comint.el (comint-dynamic-complete-as-filename):
	Use read-file-name-completion-ignore-case.

2007-07-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* comint.el (comint-dynamic-list-filename-completions):
	Use read-file-name-completion-ignore-case.

	* vc-cvs.el: Require CL.
	(vc-cvs-revision-table, vc-cvs-revision-completion-table):
	New functions to provide completion of revision names.

	* vc-cvs.el (vc-functions): Clear up the cache when reloading the file.
	(vc-cvs-annotate-first-line-re): New const.
	(vc-cvs-annotate-process-filter): New fun.
	(vc-cvs-annotate-command): Use them and run the command asynchronously.

2007-07-12  Paul Pogonyshev  <pogonyshev@gmx.net>

	* emacs-lisp/eldoc.el (eldoc-last-data): Revise documentation.
	(eldoc-print-current-symbol-info): Adjust for changed helper
	function signatures.
	(eldoc-get-fnsym-args-string): Add `args' argument.  Use new
	`eldoc-highlight-function-argument'.
	(eldoc-highlight-function-argument): New function.
	(eldoc-get-var-docstring): Format documentation with
	`font-lock-variable-name-face'.
	(eldoc-docstring-format-sym-doc): Add `face' argument and apply it
	where suited.
	(eldoc-fnsym-in-current-sexp): Return a list with argument index.
	(eldoc-beginning-of-sexp): Return number of skipped sexps.

2007-07-11  Michael Albinus  <michael.albinus@gmx.de>

	* progmodes/compile.el (compilation-start): `start-process' must
	still be redefined when calling `start-process-shell-command'.

	* progmodes/gud.el (gud-file-name): When `default-directory' is a
	remote file name, prepend its remote part to the filename.
	(gud-common-init): When `default-directory' is a remote file name,
	make the filename relative to it.
	Based on a patch by Nick Roberts <nickrob@snap.net.nz>.

2007-07-11  Dan Nicolaescu  <dann@ics.uci.edu>
